fixed scrolling overflow and select widths

--- a/src/client/assets/css/forms.sass
+++ b/src/client/assets/css/forms.sass
@@ -40,11 +40,12 @@ input[type=text], input[type=password], input[type=email], textarea
 select
     width: 100%
     font-size: 1.2em
-    padding: 14px
+    padding: 2px;
     background-color: white
     border-color: $color-light
     border-style: solid
     border-radius: 4px
+    border-width: 2px
     outline: none
     color: $color-tertiary
 
@@ -201,6 +202,3 @@ checkbox:checked + label:hover
 .checkbox:checked + label:after 
     font-size: 28px
     left: 6px
-
-select
-    border-width: 2px
